# WebX

./: .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  START.bat  babel.config.cjs  cache.manifest.json  index.html  jest.config.cjs  jest.config.js  manifest.json  package-lock.json  package.json  server.cjs  server.manifest.json  tsconfig.json  webpack.config.js
.github/agents/: my-agent.agent.md
WebX/: package.json
compiler/src/: parser.ts
docs/: API.md  BUGS.md  COMPILER.md  EXAMPLES.md  GRAMMAR.md  IR.md  KUHUL.md  KUHUL_ML_ENGINE.md  KXML_GOVERNANCE.md  LLM-INTEGRATION.md  MODELS.md  benchmarks.md  capabilities.md  use-cases.md
docs/releases/: Agents.NET.v1.0.0.md  KUHUL.EXE.v3.0.0.md  KUHUL.v1.0.0.md  SCX.v1.0.0.md  SCXRuntime.v1.0.0.md  gpu-trainer.md  v0.1.0-igpu-trainer.md  v0.1.0-micronaut-factory.md  v0.1.0-xvm-cpu-thread-cluster.md  v0.1.1-igpu-trainer-xjsl.md  v0.2.0-kuhul-directx-native.md  v1.0.0-PowerShell-LLM.md  v3.0.0-agentic-micronaut.md  v3.1.0-scx-moe.md  v3.2.0-supernaut.md  v3.3.0-scx-control-flow.md
dotnet/: README.md
dotnet-bridge/: Dispatcher.java  DotNetBridge.java  Main.java  dotnet_http_bridge.js
dotnet-workers/: sample_dotnet_inputs.json
dotnet-workers/HttpWorker/: HttpWorker.csproj  Program.cs
dotnet-workers/Workers/: SecurityPlugin.cs  SharedMemoryStateReader.cs  SyncWorker.cs
dotnet/docs/: EXPERIMENTS.md  MODELS.md  OPENAI-CONNECTOR-MIGRATION.md  TELEMETRY.md
dotnet/notebooks/: README.md
dotnet/nuget/: NUGET.md  VECTORDATA-CONNECTORS-NUGET.md
dotnet/samples/: README.md
examples/: basic-buffers.html  geometric-execution-demo.html  geometric-substrate.html  mesh-transform-demo.html  micronaut-atlas.html  mind-binder-demo.html  mx2lm-directwrite-gpu.html  neural-network-demo.html  studio.html
examples/js/: kuhul-basic.html  mesh-viewer.html  neural-inference.html
examples/kuhul/: hello-world.kuhul  mesh-compression.kuhul  neural-layer.kuhul  physics-sim.kuhul  point-cloud.kuhul
examples/kxml/: shader-kxml-unified.html
examples/numatics/: gram-cache-final-layer.html  kuhul-xcfe-shader-system.html  micronaut-numatics-runtime.html
examples/optical/: optical-compute-demo.html
examples/shader-kxml/: directxmath-kxml-unified.html
examples/tensor-viewer/: mx2lm-tensor-viewer.html
grammar-ebnf/: KUHUL-LLM.ebnf
kuhul/: README.md  index.js  package.json
kuhul/compiler/: codegen.js  ir-generator.js  ir-generator.ts  kuhul-compiler.js  lexer.js  lexer.ts  parser.js  parser.ts  semantic-analyzer.js  semantic-analyzer.ts
kuhul/docs/: API.md  COMPILER.md  EXAMPLES.md  GRAMMAR.md  IR.md  LANGUAGE.md  LLM.md  RUNTIME.md
kuhul/examples/: hello-world.kuhul  mesh-compression.kuhul  neural-layer.kuhul  physics.kuhul  point-cloud.kuhul
kuhul/grammar/: README.md  ebnf-parser.js  ebnf-parser.ts  grammar-validator.js  grammar-validator.ts  kuhul.ebnf
kuhul/ir/: ir-builder.js  ir-builder.ts  ir-optimizer.js  ir-optimizer.ts  ir-printer.js  ir-types.js  ir-types.ts  ir-verifier.js  ir-verifier.ts
kuhul/kxml/: KUHUL_FUNCTIONS.kuhul  KXML_BIDIRECTIONAL_GRAPH_TOPOLOGY.kuhul  KXML_BIDIRECTIONAL_GRAPH_WGPU_BINDINGS.kuhul  KXML_DISTRIBUTED_PI_TRAINER.kuhul
kuhul/llm/: diagnostic-engine.js  diagnostic-engine.ts  doc-generator.js  doc-generator.ts  glyph-validator.js  glyph-validator.ts  optimizer.js  optimizer.ts  syntax-completer.js  syntax-completer.ts
kuhul/pggtf/: GLYPH_COMPILER_SPEC.kuhul
kuhul/runtime/: execution-engine.js  execution-engine.ts  kuhul-vm.js  kuhul-vm.ts  memory-manager.js  memory-manager.ts  phase-manager.js  phase-manager.ts  scheduler.js
kuhul/stdlib/: glyphs.js  io.js  math.js  tensor.js
kuhul/tests/: codegen.test.js  codegen.test.ts  integration.test.js  integration.test.ts  ir.test.js  ir.test.ts  lexer.test.js  lexer.test.ts  parser.test.js  parser.test.ts  semantic.test.js  semantic.test.ts
kuhul/tools/: debugger.js  debugger.ts  formatter.js  linter.js  linter.ts  profiler.js  profiler.ts  repl.js  repl.ts
model/: atomic-brain.glyph-spec.json
models/: model-registry.json
native/: NATIVE_TOOLCHAIN_STATUS.md  TOOLCHAIN_BOOTSTRAP.md  bootstrap_toolchain.ps1  trainer-server.cjs
native/d3d12_compute/: BUILD_WITHOUT_VS.md  CMakeLists.txt  README.md  build.bat  build_sxme.bat  build_sxme_ninja.bat  main.cpp  shader.hlsl  shader_sxme.hlsl  sxme_compute.cpp  triangle.hlsl
native/geometry/: GeometryFieldMap.h
native/gpu_trainer/: asx_ram_controller.h  asx_ram_test.cpp  cockpit_host.cpp  d3d11_engine.cpp  d3d11_engine.h  d3d12_engine.h  dx12_inference_pipeline.cpp  dx12_inference_pipeline.h  gpt2_config.h  gpt2_train_main.cpp  gpt2_trainer.cpp  gpt2_trainer.h  (+14 more)
native/semantic_reader/: CMakeLists.txt  semantic_reader.cpp  semantic_reader.h
native/win2d/: CMakeLists.txt  FibonacciComputeNode.h  StableOps.h  Win2DGreenScreenCanvas.h  Win2DOpticalGeometry.h  stable_graph.kxml
native/win2d/field_system/specs/: attraction_well_spec.json  navigation_force_spec.json  scroll_inertia_field_spec.json  wind_field_spec.json
native/win2d/shaders/: field_optimizer.hlsl
registry/: agents-net.registry.json  micronauts.registry.json
shaders/: evolution.hlsl  fabric_kernel_minimal.hlsl  fabric_kernels.hlsl  gpt2_adam.hlsl  gpt2_adam_wte.hlsl  gpt2_attn_bwd.hlsl  gpt2_attn_fwd.hlsl  gpt2_gelu_bwd.hlsl  gpt2_gelu_fwd.hlsl  gpt2_layernorm_bwd.hlsl  gpt2_layernorm_fwd.hlsl  gpt2_lm_head_bwd.hlsl  gpt2_loss.hlsl  gpt2_matmul.hlsl  gpt2_residual.hlsl  int4_matmul.hlsl  kuhul_fold_meta.hlsl  kuhul_fold_storage.hlsl  matmul_int4.hlsl  moe_route.hlsl  moe_route_warp.hlsl  mutation.hlsl  orchestrate.hlsl  reward.hlsl  sxme_expert.hlsl  sxme_glyph_exec.hlsl  sxme_router.hlsl
skills/: skill-runner.mjs  thoughts-skill.md
src/: command-list.js  d12webx.js  field-system.js  geometric-operators.js  gpu-allocator.js  index.html  index.js  kuhul.js  mind-binder.js  svg3d.js
tools/: glyph_opcode_system.xjson  kuhul.tools.jsonl  kuhul3d_compile.py  kuhul3d_execute.py  micronaut.actions.jsonl  validate_release.py
(+548 files in other folders)
